tests/baselines/reference/unusedMultipleParameters2InFunctionDeclaration.errors.txt
tests/cases/compiler/unusedMultipleParameters2InFunctionDeclaration.ts(2,18): error TS6134: Parameter 'person' has never been used.
tests/cases/compiler/unusedMultipleParameters2InFunctionDeclaration.ts(2,51): error TS6134: Parameter 'person3' has never been used.
tests/cases/compiler/unusedMultipleParameters2InFunctionDeclaration.ts(3,9): error TS6133: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedMultipleParameters2InFunctionDeclaration.ts (3 errors) ====
    
    function greeter(person: string, person2: string, person3: string) {
                     ~~~~~~~~~~~~~~
!!! error TS6134: Parameter 'person' has never been used.
                                                      ~~~~~~~~~~~~~~~
!!! error TS6134: Parameter 'person3' has never been used.
        var unused = 20;
            ~~~~~~
!!! error TS6133: Variable 'unused' has never been used.
        person2 = "dummy value";
    }